c/src/test/resources/c/mini_bnc/valid/ex21Simp-inv.ctrl
<controlFile>
  <sourceFile name="ex21Simp.c" id="1" />
  <run>
    <startPosition fileId="1" line="10" />
    <wayPoint fileId="1" line="12" >
      <loop>
        <invariant><![CDATA[
          i >= 0 && i <= 100 &&
          implies(i >= 0 && i < 100, valid(&a[i]) && valid(&b[i]))
        ]]>
        </invariant>
      </loop>
    </wayPoint>
    <endPosition fileId="1" line="17" />
  </run>
</controlFile>