c/src/test/resources/c/mini_bnc/invalid/ex40Simp-inv.ctrl
<controlFile>
  <sourceFile name="ex40Simp.c" id="1" />
  <run>
    <startPosition fileId="1" line="6" />
    <wayPoint fileId="1" line="10" >
      <loop>
        <invariant><![CDATA[
          i >= 0 && valid(&x[i]) && valid(&y[i])
        ]]>
        </invariant>
      </loop>
    </wayPoint>
    <endPosition fileId="1" line="15" />
  </run>
</controlFile>